ECA-993: add Krb5PrincipalName as a possible OtherName in Subject Alternative Names.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@6496 37aeb1de-b14b-0410-9a0e-82b28170d228